[gd_scene load_steps=4 format=2]

[ext_resource path="res://Asset/Altitude/Asia/Asia.gd" type="Script" id=1]
[ext_resource path="res://Asset/Altitude/Asia/Temple/Temple.tscn" type="PackedScene" id=2]
[ext_resource path="res://Asset/Altitude/Street/Floor/Floor.tscn" type="PackedScene" id=3]

[node name="Asia" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
Floor = ExtResource( 3 )
Temple = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -170.0
margin_top = 12.0
margin_right = -4.0
margin_bottom = 37.0
text = "Asia"

[node name="TempleSpawn" type="Position2D" parent="."]
position = Vector2( 1262, 40 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="TempleSpawn"]
margin_left = 38.0
margin_top = -10.0
margin_right = 204.0
margin_bottom = 15.0
text = "Temple Spawn"

[node name="FloorSpawn" type="Position2D" parent="."]
position = Vector2( 1262, 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="FloorSpawn"]
margin_left = 41.0
margin_top = -13.0
margin_right = 207.0
margin_bottom = 12.0
text = "Floor Spawn"

[node name="Timer" type="Node2D" parent="."]
position = Vector2( -1, 1 )

[node name="Temple" type="Timer" parent="Timer"]

[node name="Floor" type="Timer" parent="Timer"]

[connection signal="timeout" from="Timer/Temple" to="." method="_on_Temple_timeout"]
[connection signal="timeout" from="Timer/Floor" to="." method="_on_Floor_timeout"]
